ingress.yml
apiVersion: v1
kind: Namespace
metadata:
  name: tesla

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tesla-deployment
  namespace: tesla
spec:
  replicas: 3
  selector:
    matchLabels:
      app: tesla
  template:
    metadata:
      labels:
        app: tesla
    spec:
      containers:
      - name: tesla
        image: 172868971923.dkr.ecr.us-east-1.amazonaws.com/tesla-clone:latest
        ports:
        - containerPort: 9005

---
apiVersion: v1
kind: Service
metadata:
  name: tesla-service
  namespace: tesla
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 9005
  selector:
    app: tesla

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tesla-ingress
  namespace: tesla
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  ingressClassName: alb
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: tesla-service
            port:
              number: 80
